# pegasusllama

./: README.md  pyproject.toml
src/pegasusllama/: __init__.py
src/pegasusllama/check_cuda/: __main__.py
