[project]
name = "pegasusllama"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "range3", email = "white.line.oar@gmail.com" }
]
dependencies = [
    "transformers>=4.44.2",
    "torch>=2.4.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
check-cuda = "pegasusllama.check_cuda.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pegasusllama"]
